# PokeBackend

./: .gitignore  CMakeLists.txt  README.md
code/: Arena.hpp  Battle.hpp  Move.cpp  Move.hpp  MoveLibrary.cpp  MoveLibrary.hpp  Player.cpp  Player.hpp  Pokemon.cpp  Pokemon.hpp  PokemonLibrary.cpp  PokemonLibrary.hpp  Type.cpp  Type.hpp  main.cpp
code/data/: movelist.csv  pokemonlist.csv
